# predict-aurora-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
src/aurora/: server.py
