[project]
name = "predict-aurora-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14.2"
dependencies = [
    "fastmcp>=2.14.3",
    "mcp[cli]>=1.25.0",
    "openai>=2.15.0",
    "requests>=2.32.5",
]

classifiers = [
    "License :: Other/Proprietary License",
]

[project.scripts]
aurora = "aurora.server:main"

[build-system]
requires =  ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
